trunk/Archive2/3f/dad471c0c26d41/output
main.cpp:1:14: error: C++ requires a type specifier for all declarations
static const totalThreads = 16;
~~~~~~~~~~~~ ^
main.cpp:4:12: error: unknown type name 'vector'
    static vector<thread> threads(totalThreads);
           ^
main.cpp:4:18: error: expected unqualified-id
    static vector<thread> threads(totalThreads);
                 ^
main.cpp:6:9: error: use of undeclared identifier 'threads'
        threads[i] = thread(workOnTheseEdges,startIndex[i], endIndex[i]); 
        ^
main.cpp:6:29: error: use of undeclared identifier 'workOnTheseEdges'
        threads[i] = thread(workOnTheseEdges,startIndex[i], endIndex[i]); 
                            ^
main.cpp:7:25: error: use of undeclared identifier 'threads'
    for (auto& thread : threads)
                        ^
6 errors generated.
